<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_white"
        android:background="@drawable/bg_for_arrow_back_white"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guidline" />

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/sign_up"

        style="@style/DefaultTextViewStyle"

        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"

        style="@style/AuthorizationEditTextStyle"

        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

    <TextView
        android:id="@+id/wrong_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_address"
        android:visibility="gone"

        style="@style/DefaultErrorTextStyle"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        style="@style/AuthorizationEditTextStyle"

        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"
        app:layout_constraintTop_toBottomOf="@id/wrong_email_label"/>

    <TextView
        android:id="@+id/wrong_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_must_meet_all_conditions"
        android:visibility="gone"

        style="@style/DefaultErrorTextStyle"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repeat_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"

        style="@style/AuthorizationEditTextStyle"

        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"
        app:layout_constraintTop_toBottomOf="@id/wrong_password_label"/>

    <TextView
        android:id="@+id/passwords_not_matches_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_mismatch"
        android:visibility="gone"

        style="@style/DefaultErrorTextStyle"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_edit_text"/>

    <TextView
        android:id="@+id/password_rules_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/password_rules"

        style="@style/DefaultTextViewStyle"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/passwords_not_matches_label"
        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"

        style="@style/DefaultButtonStyle"

        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>