<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_favourite_authors"

        style="@style/BigCreatingProfileLabelsStyle"

        android:layout_marginTop="@dimen/creating_profile_label_margin_top"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guidline" />

    <TextView
        android:id="@+id/label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/creating_profile_description_label_text_size"
        android:text="@string/choose_from_to_authors"

        style="@style/DefaultTextViewStyle"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="@id/start_guidline"/>

    <com.levit.book_me.core.ui.custom_view.CreatingProfileAuthorChooser
        android:id="@+id/author_chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/label_description"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_at_least_authors"

        style="@style/DefaultErrorTextStyle"

        android:layout_margin="8dp"

        app:layout_constraintTop_toBottomOf="@id/author_chooser"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"

        style="@style/DefaultButtonStyle"

        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>