<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guidline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guidline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_surname"

            style="@style/BigCreatingProfileLabelsStyle"

            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/creating_profile_label_margin_top"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="25"

            style="@style/DefaultEditTextStyle"

            android:layout_marginTop="16dp"

            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintTop_toBottomOf="@id/label"
            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

        <TextView
            android:id="@+id/invalid_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            style="@style/DefaultErrorTextStyle"

            app:layout_constraintStart_toStartOf="@id/name_text_input"
            app:layout_constraintTop_toBottomOf="@id/name_text_input"

            tools:visibility="gone"
            tools:text="Invalid name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:maxLength="25"

            style="@style/DefaultEditTextStyle"

            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@id/invalid_name_label"
            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

        <TextView
            android:id="@+id/invalid_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            style="@style/DefaultErrorTextStyle"

            app:layout_constraintStart_toStartOf="@id/surname_text_input"
            app:layout_constraintTop_toBottomOf="@id/surname_text_input"

            tools:visibility="gone"
            tools:text="Invalid surname"/>

        <TextView
            android:id="@+id/some_words_about_you_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_words_about_you"

            style="@style/BigCreatingProfileLabelsStyle"

            android:layout_marginTop="32dp"

            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintTop_toBottomOf="@id/invalid_surname_label"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/words_about_you_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/something_interesting_about_you"
            android:maxLength="175"
            android:inputType="textMultiLine"
            android:maxLines="7"

            style="@style/DefaultEditTextStyle"

            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@id/some_words_about_you_label"
            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

        <TextView
            android:id="@+id/choose_favourite_qoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_favourite_quote"

            style="@style/BigCreatingProfileLabelsStyle"

            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@id/words_about_you_input_edit_text"
            app:layout_constraintStart_toStartOf="@id/start_guidline"/>

        <com.levit.book_me.core.ui.custom_view.QuoteItemView
            android:id="@+id/quote_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintTop_toBottomOf="@id/choose_favourite_qoute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"

            style="@style/DefaultButtonStyle"

            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quote_item"
            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintEnd_toEndOf="@id/end_guidline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>