<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guidline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_your_photo"

        style="@style/BigCreatingProfileLabelsStyle"

        android:layout_marginTop="@dimen/creating_profile_label_margin_top"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guidline"/>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/creating_profile_make_photo_description"
        android:textSize="@dimen/creating_profile_description_label_text_size"

        android:layout_marginTop="16dp"

        style="@style/DefaultTextViewStyle"

        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"/>

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:scaleType="centerCrop"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/label_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/photo_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/take_a_photo_or_choose_from_your_library"
        android:gravity="center"

        style="@style/DefaultTextViewStyle"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        style="@style/DefaultProgressBarStyle"

        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"

        style="@style/DefaultButtonStyle"

        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guidline"
        app:layout_constraintEnd_toEndOf="@id/end_guidline"/>
</androidx.constraintlayout.widget.ConstraintLayout>