<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/now_let_the_magic_do_the_work"

            style="@style/MainScreenBigTextViewStyle"

            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/label_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/we_will_introduce_you_to_one_bookish_person_to_have_the_booktalk_with"

            style="@style/MainScreenLabelDescriptionStyle"

            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.github.ferum_bot.boxprogressbar.BoxLoaderView
            android:id="@+id/progress_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"

            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_description"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/progress_bar_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_for_person_may_take_a_time_keep_it_working"
            android:gravity="center"

            style="@style/MainScreenGrayTextViewStyle"

            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>